fix: update application.properties to use environment variables and add Dockerfile for build and run stages

--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=projetoVivoxi
-spring.datasource.url=jdbc:postgresql://localhost:5433/vivoxi-database
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/vivoxi-database}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 
 # habilita o Flyway
-spring.flyway.enabled=true
+spring.flyway.enabled=${SPRING_FLYWAY_ENABLED:true}
 
 logging.level.org.flywaydb=DEBUG
 
