--- a/frontEnd/projeto-vivoxi/package.json
+++ b/frontEnd/projeto-vivoxi/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prod": "vite --port 80",
+    "prod": "vite --port 80 --host 0.0.0.0",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
