--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 
 # habilita o Flyway
 spring.flyway.enabled=${SPRING_FLYWAY_ENABLED:true}
+spring.flyway.baseline-on-migrate=true
 
 logging.level.org.flywaydb=DEBUG
 
