fix: reorganize application.properties for better clarity and structure

--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=projetoVivoxi
+
+server.port=${PORT:10000}
+server.address=0.0.0.0
+
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/vivoxi-database}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
