--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=projetoVivoxi
 server.port=${PORT:10000}
 server.address=0.0.0.0
 
+# CORS - separate multiple origins with comma
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
+
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/vivoxi-database}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
